--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ avatar: images/circle_bw_crop.jpg
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email: kotti.1@iitj.ac.in
+  email: kotti.sasikanth@gmail.com
   facebook:
   flickr:
   github: ksasi
