--- a/_config.yml
+++ b/_config.yml
@@ -55,7 +55,7 @@ url: # the base hostname & protocol for your site
 #
 
 #permalink: /:title/
-permalink: /
+#permalink: /
 
 
 # The release of Jekyll Now that you're using
